fletchers always give slow falling arrows

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ jar {
         rename { "${it}_${project.archivesBaseName}"}
     }
 }
+loom {
+    accessWidenerPath = file("src/main/resources/aatas.accesswidener")
+}
 
 // configure the maven publication
 publishing {
